--- a/SwipeLeft/Info.plist
+++ b/SwipeLeft/Info.plist
@@ -6,5 +6,9 @@
     <string>We need access to your photo library to let you browse and organize your photos.</string>
     <key>NSPhotoLibraryAddUsageDescription</key>
     <string>We need permission to save photos to your library.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>SwipeLeft needs access to your photo library to let you browse, save, and share photos with swipe gestures.</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>SwipeLeft needs permission to save photos to your library when you choose to save them.</string>
 </dict>
 </plist> 
